--- a/clanovi.html
+++ b/clanovi.html
@@ -94,6 +94,15 @@
 								</article>
 								<article>
 									<header>
+										<h2>Ivana Pitteroff</h2>
+									</header>
+									<ul class="icons alt">
+										<li><a href="https://www.instagram.com/andvana_pitt/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/ivanapitteroff" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2>Hrvoje Motik</h2>
 									</header>
 									<ul class="icons alt">
@@ -111,11 +120,10 @@
 								</article>
 								<article>
 									<header>
-										<h2>Victorio Knižek</h2>
+										<h2>Tomislav Novak</h2>
 									</header>
 									<ul class="icons alt">
-										<li><a href="https://www.instagram.com/viki.knizek/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://www.openpowerlifting.org/u/victorioknizek" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/tomislavnovak" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
 									</ul>
 								</article>
 								<article>
@@ -138,15 +146,6 @@
 								</article>
 								<article>
 									<header>
-										<h2>Robert Bunjan</h2>
-									</header>
-									<ul class="icons alt">
-										<li><a href="https://www.instagram.com/robertbunjan/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://www.openpowerlifting.org/u/robertbunjan" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
 										<h2>Jelena Ivančić</h2>
 									</header>
 									<ul class="icons alt">
@@ -159,7 +158,7 @@
 										<h2>Sanja Mervcich</h2>
 									</header>
 									<ul class="icons alt">
-										<li><a href="https://www.instagram.com/m_saniam/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.instagram.com/__san__chi__/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="https://www.openpowerlifting.org/u/sanjamervcich" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
 									</ul>
 								</article>
@@ -173,20 +172,10 @@
 								</article>
 								<article>
 									<header>
-										<h2>Dominik Zemljić</h2>
+										<h2>Nikola Bijuk</h2>
 									</header>
 									<ul class="icons alt">										
-										<li><a href="https://www.instagram.com/zemljicdominik/" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://www.openpowerlifting.org/u/dominikzemljic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2>Ines Krstanović</h2>
-									</header>
-									<ul class="icons alt">										
-										<li><a href="https://www.instagram.com/ineskrstanovic/" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://www.openpowerlifting.org/u/ineskrstanovic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/nikolabijuk" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
 									</ul>
 								</article>
 								<article>
@@ -200,10 +189,45 @@
 								</article>
 								<article>
 									<header>
+										<h2>Tea Schmidichen</h2>
+									</header>
+									<ul class="icons alt">										
+										<li><a href="https://www.openpowerlifting.org/u/teaschmidichen" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2>Martina Starešina</h2>
 									</header>
 									<ul class="icons alt">										
 										<li><a href="https://www.openpowerlifting.org/u/martinastaresina" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Tamara Mijatović</h2>
+									</header>
+									<ul class="icons alt">										
+										<li><a href="https://www.instagram.com/tmijtvc/" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/tamaramijatovic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Darko Stolac</h2>
+									</header>
+									<ul class="icons alt">
+										<li><a href="https://www.instagram.com/darko_wanderer/" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/darkostolac" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Mateo Tomašević</h2>
+									</header>
+									<ul class="icons alt">
+										<li><a href="https://www.instagram.com/tomasi_iz_gaja/" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/mateotomasevic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
 									</ul>
 								</article>
 								<article>
@@ -220,7 +244,7 @@
 										<h2>Goran Odrljin</h2>
 									</header>
 									<ul class="icons alt">		
-										<li><a href="https://www.instagram.com/gogowantsgainz/" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.instagram.com/gorantheone/" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="https://www.openpowerlifting.org/u/goranodrljin" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
 									</ul>
 								</article>								
@@ -249,6 +273,68 @@
 									<ul class="icons alt">										
 										<li><a href="https://www.instagram.com/dimix.de/" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="https://www.openpowerlifting.org/u/dorabelas" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Nikša Borovac</h2>
+									</header>
+									<ul class="icons alt">										
+										<li><a href="https://www.openpowerlifting.org/u/niksaborovac" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Marin Milikić</h2>
+									</header>
+									<ul class="icons alt">										
+										<li><a href="https://www.instagram.com/medo_lifts98/" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/marinmilikic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Toni Slavko Miše</h2>
+									</header>
+									<ul class="icons alt">										
+										<li><a href="https://www.instagram.com/toni_mise_/" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/tonislavkomise" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Ines Poslon</h2>
+									</header>
+									<ul class="icons alt">										
+										<li><a href="https://www.instagram.com/ines.poslon/" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/inesposlon" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Nikolas Wielakker</h2>
+									</header>
+									<ul class="icons alt">										
+										<li><a href="https://www.instagram.com/_nikolaswielakker_/" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/nikolaswielakker" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Luka Turković</h2>
+									</header>
+									<ul class="icons alt">										
+										<li><a href="https://www.instagram.com/turkec711/" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/lukaturkovic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Luka Turković</h2>
+									</header>
+									<ul class="icons alt">										
+										<li><a href="https://www.instagram.com/turkec711/" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/lukaturkovic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
 									</ul>
 								</article>
 								<article>
