--- a/uclanjenje.html
+++ b/uclanjenje.html
@@ -64,7 +64,7 @@
 								<p><h3>Učlanjenje u klub</h3>
 								Za učlanjenje u klub potrebno je ispuniti <a href="pdfs/pristupnica.pdf" target="_blank">pristupnicu (download)</a>.</p>								
 								<p>Prije učlanjenja u klub potrebno je odraditi probni trening u klubu ili u slučaju da niste iz Zagreba, potrebno je poslati video snimke izvođenja natjecateljskih disciplina na treningu. Ovo je potrebno iz razloga kako bismo mogli procijeniti na kojoj ste razini i koliko poznajete pravila powerliftinga za svoje prvo natjecanje.</p>
-								<p>Za upis u klub plaća se jednokratna upisnina od 50 kn, a zauzvrat dobivate besplatnu PLK Štanga majicu. Cjenik mjesečnih članarina za trening u klupskom prostoru je objavljen <a href="gym.html">ovdje</a>. Članovi koji ne treniraju u klupskom prostoru plaćaju 200 kn godišnju članarinu (umjesto mjesečne), koja vrijedi cijelu kalendarsku godinu.</p> 
+								<p>Za upis u klub plaća se jednokratna upisnina od 7 €, a zauzvrat dobivate besplatnu PLK Štanga majicu. Cjenik mjesečnih članarina za trening u klupskom prostoru je objavljen <a href="gym.html">ovdje</a>. Članovi koji ne treniraju u klupskom prostoru plaćaju 30 € godišnju članarinu (umjesto mjesečne), koja vrijedi cijelu kalendarsku godinu.</p> 
 								<p><h3>Strani državljani</h3>
 								Strani državljani mogu se učlaniti u klub i natjecati kao punopravni natjecatelj u Hrvatskoj na svim natjecanjima osim državnih prvenstava. Potrebna je potvrda matičnog saveza da se sportaš već natječe u toj državi i da ima dozvolu natjecati se u Hrvatskoj unutar HPLS-a.
 								</p>
@@ -76,8 +76,8 @@
 								<li>Dvije fotografije malog formata</li>
 								<li>Liječnička potvrda o sposobnosti za natjecanja i sport</li></ol>
 								<h3>Liječnička potvrda</h3>
-								Liječnička potvrda se u Zagrebu može se dobiti na Borovju ili Gajnicama (<a href="http://www.poliklinika-zagreb.hr/" target="_blank">http://www.poliklinika-zagreb.hr/</a>) - potrebno je dostaviti im nalaz krvi ne stariji od 6 mjeseci, a moguće je i krv izvaditi tamo u jutarnjim terminima. Bez naručivanja moguće je obaviti pregled bilo kojim radnim danom u 8 ujutro. Cijena je 40 kn.<br/>
-								Pregled je moguće obaviti i privatno u bilo kojoj ustanovi za medicinu rada i sporta.<br/>
+								Liječnička potvrda se u Zagrebu može se dobiti na Borovju ili Gajnicama (<a href="http://www.poliklinika-zagreb.hr/" target="_blank">http://www.poliklinika-zagreb.hr/</a>) - potrebno je dostaviti im nalaz krvi ne stariji od 6 mjeseci, a moguće je i krv izvaditi tamo u jutarnjim terminima. Bez naručivanja moguće je obaviti pregled bilo kojim radnim danom u 8 ujutro. Cijena je simbolična, oko 7 €.<br/>
+								Pregled je moguće obaviti i privatno u bilo kojoj ustanovi za medicinu rada i sporta. U tom slučaju cijena je nešto viša.<br/>
 								Važno je da na liječničkoj potvrdi piše da je osoba sposobna za sport powerlifting.
 								</p>
 							</section>
