Update statut, članovi, cjenik

--- a/clanovi.html
+++ b/clanovi.html
@@ -58,13 +58,13 @@
 								<header class="major">
 									<!--span class="date">April 25, 2017</span-->
 									<h1>Članovi</h1>
-									<p>Klub trenutno broji preko 30 članova od kojih su većina natjecatelji. Vodstvo kluba čine Alan Sambol (predsjednik), Krunoslav Dropučić (dopredsjednik) i Stjepan Balog (tajnik). Glavni trener kluba je također Stjepan Balog, jedan od certificiranih nacionalnih IPF trenera powerliftinga.</p>
+									<p>Klub trenutno broji preko 100 članova od kojih su većina natjecatelji. Vodstvo kluba čine Alan Sambol (predsjednik), Krunoslav Dropučić (dopredsjednik) i Tea Schmidichen (tajnica). Glavni trener kluba je također Stjepan Balog, jedan od certificiranih nacionalnih IPF trenera powerliftinga. Ostali treneri u klubu su Marin Milikić, Ognjen Đurđević, Slavko Volarević.</p>
 								</header>
-								<p>U nastavku je popis naših aktivnih natjecatelja po redoslijedu pristupanja klubu, zajedno s linkovima na socijalne mreže i OpenPowerlifting gdje su svi njihovi rezultati.</p> 
+								<p>Za detaljnije upoznavanje s našim članicama i članovima, zapratite nas na društvenim mrežama.</p> 
 							</section>
 
 							<!-- Posts -->
-							<section class="posts">
+							<!--section class="posts">
 								<article>
 									<header>
 										<h2>Alan Sambol</h2>
@@ -306,7 +306,7 @@
 								<article>
 									
 								</article>
-							</section>
+							</section-->
 					</div>
 
 				<!-- Footer -->
