--- a/gym.html
+++ b/gym.html
@@ -77,9 +77,9 @@
 								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d173.85215082641017!2d15.919525908501111!3d45.79855146322995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4765d14b81a70f53%3A0x3ca43e1511177f23!2sRude%C5%A1ka%20cesta%2092%2C%2010000%2C%20Zagreb!5e0!3m2!1sen!2shr!4v1633466751343!5m2!1sen!2shr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></p>
 								<div class="image main"><img src="images/gym-0.jpg" alt="" /></div>
 								<p><ul><b>Cjenik:</b>
-								<li>Mjesečna članarina - 45 €</li>
-								<li>Polumjesečna članarina (6 dolazaka) - 25 €</li>
-								<li>Drop-in (pojedinačni dolazak) - 7 € / 4 € za članove kluba</li></ul>
+								<li>Mjesečna članarina - 50 €</li>
+								<li>6x drop-in - 35 €</li>
+								<li>Drop-in (pojedinačni dolazak) - 10 € / 5 € za članove kluba</li></ul>
 								Ako ste zainteresirani za učlanjenje, javite nam se na društvenim mrežama ili preko e-maila. Više informacija o učlanjenju u klub možete saznati <a href="uclanjenje.html">ovdje</a>.
 								<p><ul><b>Detaljne fotke prostora:</b>
 								<li>Dvorana za vježbanje</li>
