Trener typo fix

--- a/clanovi.html
+++ b/clanovi.html
@@ -58,7 +58,7 @@
 								<header class="major">
 									<!--span class="date">April 25, 2017</span-->
 									<h1>Članovi</h1>
-									<p>Klub trenutno broji preko 100 članova od kojih su većina natjecatelji. Vodstvo kluba čine Alan Sambol (predsjednik), Krunoslav Dropučić (dopredsjednik) i Tea Schmidichen (tajnica). Glavni trener kluba je također Stjepan Balog, jedan od certificiranih nacionalnih IPF trenera powerliftinga. Ostali treneri u klubu su Marin Milikić, Ognjen Đurđević, Slavko Volarević.</p>
+									<p>Klub trenutno broji preko 100 članova od kojih su većina natjecatelji. Vodstvo kluba čine Alan Sambol (predsjednik), Krunoslav Dropučić (dopredsjednik) i Tea Schmidichen (tajnica). Glavni trener kluba je Stjepan Balog, jedan od certificiranih nacionalnih IPF trenera powerliftinga. Ostali treneri u klubu su Marin Milikić, Ognjen Đurđević, Slavko Volarević.</p>
 								</header>
 								<p>Za detaljnije upoznavanje s našim članicama i članovima, zapratite nas na društvenim mrežama.</p> 
 							</section>
